# rust-playground

./: .gitignore  Cargo.toml  README.md
async-post-wrapper/: Cargo.toml  README.md
async-post-wrapper/src/: main.rs
async-service/: Cargo.toml  README.md
async-service-wrapper/: Cargo.toml  README.md
async-service-wrapper/src/: main.rs
async-service/src/: main.rs
async-simple/: Cargo.toml  README.md
async-simple/src/: main.rs
async-stream-s3/: Cargo.toml  README.md  test-file.csv
async-stream-s3/src/: main.rs
bench-vecmap/: Cargo.toml
bench-vecmap/benches/: bench.rs
deref-pizza/: Cargo.toml
deref-pizza/src/: main.rs
enum-use/: Cargo.toml
enum-use/src/: main.rs
error-serde/: Cargo.toml
error-serde/src/: main.rs
lambda-explicitness/: Cargo.toml
lambda-explicitness/src/: main.rs
meta-build/: Cargo.toml  build.rs
meta-build/src/: lib.rs
option-mapping/: Cargo.toml
option-mapping/src/: main.rs
probability/: Cargo.toml
probability/src/: lib.rs
safety-option-npo/: Cargo.toml  README.md
safety-option-npo/src/: main.rs
test-random-json/: Cargo.toml
test-random-json/src/: main.rs
tower-lambda-injector/: Cargo.toml  README.md  template.yaml
tower-lambda-injector/src/: main.rs
