[workspace]

members = [
    # Async
    "async-simple",
    "async-service",
    "async-service-wrapper",
    "async-post-wrapper",
    "async-stream-s3",

    # Lambda
    "lambda-explicitness",

    # Safety
    "safety-option-npo",

    # Testing
    "test-random-json",

    # Tower
    "tower-lambda-injector",

    # Types
    "deref-pizza",
    "option-mapping",
]
